navigation, city delete

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
+#root{
+
+}
 .App {
+  background-color: black;
+  color: white;
   text-align: center;
+  width: 100vw;
+  height: 100vh;
 }
 
 .App-logo {
