--- a/src/sass/Main.scss
+++ b/src/sass/Main.scss
@@ -1,6 +1,6 @@
 .top{
-    width: 50%;
-    @media  (max-width: 500px)	{
+    max-width: 500px;
+    @media  (max-width: 900px)	{
 		width: 70%;
 	}
     margin: 0 auto;
