--- a/src/sass/MiniCitys.scss
+++ b/src/sass/MiniCitys.scss
@@ -1,20 +1,25 @@
 .city__container{
 	cursor: pointer;
-	margin-top: 50px;
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
 	width: 50%;
-	@media  (max-width: 500px)	{
+	// min-height: 100vh;
+
+	@media  (max-width: 900px)	{
 		width: 70%;
 	}
 	align-items: center;
-	margin: 50px auto;
+	// margin: 50px auto;
+	margin-top: 50px;
+	margin-left: auto;
+	margin-right: auto;
+	padding-bottom: 50px;
 
 }
 .city__block {
-	position: relative;
-
+	// position: relative;
+	max-width: 500px;
 	color: white;
 	background-color: rgb(1, 175, 187);
 	border-radius: 10px;
@@ -94,4 +99,8 @@
 	width: 100%;
 	gap: 5px;
 	justify-content: center;
+}
+.city__holder{
+	position: relative;
+	width: 100%;
 }
