--- a/src/sass/CityWeather.scss
+++ b/src/sass/CityWeather.scss
@@ -200,3 +200,102 @@
         flex-direction: row;
         gap: 5px;
     }
+    .uvIndexBar{
+        background: rgb(0,128,0);
+background: linear-gradient(90deg, rgba(0,128,0,1) 0%, rgba(144,238,144,1) 20%, rgba(255,255,0,1) 40%, rgba(255,165,0,1) 60%, rgba(255,0,0,1) 80%, rgba(128,0,128,1) 100%);
+        width: 85%;
+        height: 5px;
+        margin: 0 auto;
+        position:relative;
+        border-radius: 50px;
+        .uvSmall{
+            background-color: white;
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            top: -50%;
+            // left: 0%;
+            position: absolute;
+            // border: 2px solid black;
+        }
+        .uvBig{
+            opacity: 0;
+            background-color: rgb(15, 128, 214);
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            top: -50%;
+            left: 0;
+            position: absolute;
+        }
+}
+
+
+
+.oneCity__forecast {
+    width: 370px;
+    min-height: 210px;
+    background-color: #1c9bf648;
+    margin: 20px 0px 10px 10px;
+    border-radius: 10px;
+
+    // .oneCity__forecast-top
+
+    &-top {
+        display: flex;
+        gap: 5px;
+        align-items: center;
+        text-transform: uppercase;
+        color: #e3f4fea6;
+        font-size: 15px;
+        font-weight:500;
+        padding: 10px 15px;
+        padding-bottom: 0;
+    }
+    &-body{
+      
+    }
+}
+.oneCity__forecast-body-item{
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr;
+        flex-direction: row;
+        // justify-content: space-between;
+        align-items: center;
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 5px;
+    padding: 10px 0px;
+    // padding-top: 10px;
+    border-top: .5px solid #e3f4fea6;
+    &-day{
+        font-size: 20px;
+        color: white;
+        align-self: center;
+    }
+    &-clouds{
+        display: flex;width: 100%;
+        flex-direction: row-reverse;
+       align-items: center;
+       justify-content: space-evenly;
+        img{
+            width: 30px;
+            height: 30px;
+        }
+        span{
+            min-width: 33px;
+            font-size: 15px;
+        color: rgba(227, 244, 254, 0.6509803922);
+        }
+    }
+    &-temps{
+        font-size: 15px;
+        align-self: center;
+        justify-self: center;
+        display: flex;
+        gap: 10px;
+        width: 100%;
+        justify-content: space-between;
+        color: white;
+    }
+}
