--- a/src/sass/CityWeather.scss
+++ b/src/sass/CityWeather.scss
@@ -337,3 +337,86 @@ background: linear-gradient(90deg, rgba(0,128,0,1) 0%, rgba(144,238,144,1) 20%, 
 .swiper-slide{
     width: 25px;
 }
+
+
+// humidity
+.gauge {
+    width: 100%;
+    max-width: 250px;
+    // font-family: "Roboto", sans-serif;
+    font-size: 32px;
+    color: #004033;
+  }
+  
+  .gauge__body {
+    width: 100%;
+    height: 0;
+    padding-bottom: 50%;
+    background: #b4c0be;
+    position: relative;
+    border-top-left-radius: 100% 200%;
+    border-top-right-radius: 100% 200%;
+    
+    overflow: hidden;
+  }
+  
+  .gauge__fill {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: inherit;
+    height: 100%;
+    background: #009578;
+    transform-origin: center top;
+    transform: rotate(0.25turn);
+    transition: transform 0.2s ease-out;
+  }
+  
+  .gauge__cover {
+    width: 75%;
+    color: white;
+    height: 150%;
+    background: rgb(64 , 130, 206);
+    border-radius: 50%;
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translateX(-50%);
+  
+    /* Text */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 25%;
+    box-sizing: border-box;
+  }
+  
+  #wrapper {
+    position: relative;
+    // margin: auto;
+  }
+  #meter {
+    width: 100%; height: 100%;
+    transform: rotateX(180deg);
+  }
+ 
+  #wrapper {
+    position: relative;
+    margin: auto;
+    .humidity{
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+  }
+  #meter {
+    width: 100%; height: 100%;
+    transform: rotateX(180deg);
+  }
+  .circle {
+    fill: none;
+  }
+  .outline, #mask {
+    stroke: #999;
+  }
