--- a/src/sass/CityWeather.scss
+++ b/src/sass/CityWeather.scss
@@ -1,13 +1,19 @@
+.container{
+   max-width: 764px;
+    justify-self: center;
+    margin: 0 auto;
+}
 .main{
     font-size: 20px;
     width: 100vw;
     min-height: 100vh;
     background-repeat: no-repeat;
     background-size: contain;
+
 }
 .oneCity__top {
     letter-spacing: 1.5px;
-    padding-top: 80px;
+    padding-top: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -18,7 +24,7 @@
     
     &-city {
         padding: 50px auto;
-        font-size: 50px;
+        font-size: 40px;
         font-weight: 300;
     }
 
@@ -26,7 +32,7 @@
 
     &-temp {
         font-weight: 200;
-        font-size: 100px;
+        font-size: 60px;
         padding-left: 30px;
     }
 
@@ -50,6 +56,14 @@
 .oneCity__grid {
         display: grid;
         grid-template-columns: 1fr 1fr;
+        @media(min-width: 764px){
+            grid-template-columns: 1fr 1fr 1fr;
+
+        }
+        @media(min-width: 1000px){
+            grid-template-columns: 1fr 1fr 1fr 1fr;
+
+        }
         // background-color: rgba(60, 255, 0, 0.534);
         width: 100%;
         min-height: 50vh;
@@ -234,10 +248,13 @@ background: linear-gradient(90deg, rgba(0,128,0,1) 0%, rgba(144,238,144,1) 20%, 
 
 
 .oneCity__forecast {
+    @media(min-width: 764px){
+        width: 98%;
+    }
     width: 95%;
     min-height: 210px;
     background-color: #1c9bf648;
-    margin: 20px 0px 10px 10px;
+    margin: 20px auto;
     border-radius: 10px;
 
     // .oneCity__forecast-top
@@ -308,6 +325,9 @@ background: linear-gradient(90deg, rgba(0,128,0,1) 0%, rgba(144,238,144,1) 20%, 
 
 
 .oneCity__grid_hourly{
+    @media(min-width: 764px){
+        width: 98%;
+    }
     width: 95%;
     margin: 0 auto;
     min-height: 130px;
