--- a/src/sass/CityWeather.scss
+++ b/src/sass/CityWeather.scss
@@ -499,3 +499,11 @@ background: linear-gradient(90deg, rgba(0,128,0,1) 0%, rgba(144,238,144,1) 20%, 
           }
       }
 }
+
+
+.centered {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
